--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "pokemon",
   "version": "1.0.0",
+  "description": "",
   "main": "server.js",
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
@@ -13,11 +13,10 @@
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.0.3",
-    "express": "^4.18.2",
+    "express": "^4.18.1",
     "jsx-view-engine": "^0.1.0",
     "method-override": "^3.0.0",
-    "mongoose": "^6.6.5",
-    "morgan": "^1.10.0",
+    "mongoose": "^6.6.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   }
